test/conformance/chainsaw/cli/test/matchCondition-false/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - jcmd | grep Main
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - cat | ls -l
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - echo ps -aux | grep cala
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container02
    image: czjunkfoo
  - name: container03
    image: czjunkfoo
    livenessProbe:
      httpGet:
        port: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container04
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - echo foo
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container04
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - env
  - name: container05
    image: czjunkfoo
